<!--    Copyright 2021,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->
<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Download status available</string>
    <string name="notification_button">View status</string>


    <string name="notification_success">Success</string>
    <string name="notification_failure">Failed</string>
    <string name="notification_progress">In Progress</string>
    <string name="notification_unknown">Unknown</string>

    <string name="button_loading_label">We are loading </string>
    <string name="title_activity_detail">Download Details</string>
    <string name="glide_radio_label">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_radio_label">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_label">Retrofit - Type-safe HTTP client for Android and Java by
        Square.Inc
    </string>
    <string name="unknown_file_name">File name unknown</string>
    <string name="no_button_selected_warning">Please select a file to download</string>
    <string name="download_button_label">Download</string>
    <string name="ok_button_label">OK</string>

    <string name="channel_id">downloads_channel</string>
    <string name="channel_name">Downloads</string>
    <string name="file_name_label">File name: </string>
    <string name="status_label">Status: </string>
</resources>