<?xml version="1.0" encoding="utf-8"?>
<!--    Copyright 2021,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->

<layout>

    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_detail_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintBaseline_toBaselineOf="@+id/status_label_text"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:showDownloadStatus="@{detailActivity.downloadStatus}" />

            <TextView
                android:id="@+id/file_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_middle"
                android:text="@{detailActivity.downloadedFileName}"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintBaseline_toBaselineOf="@+id/file_name_label_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <TextView
                android:id="@+id/status_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_middle"
                android:layout_marginTop="@dimen/buttonHeight"
                android:layout_marginBottom="@dimen/buttonHeight"
                android:text="@string/status_label"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintBottom_toTopOf="@+id/details_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/file_name_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_middle"
                android:layout_marginTop="@dimen/buttonHeight"
                android:layout_marginBottom="@dimen/buttonHeight"
                android:text="@string/file_name_label"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintBottom_toTopOf="@+id/status_label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="154dp" />

            <com.udacity.LoadingButton
                android:id="@+id/details_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonHeight"
                android:layout_margin="@dimen/margin_default"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:onClick="@{() -> detailActivity.finish()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:lb_background_color="@color/colorAccent"
                app:lb_text="@string/ok_button_label"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>

    <data>

        <variable
            name="detailActivity"
            type="com.udacity.DetailActivity" />
    </data>
</layout>